Sorted out CSS bugs padding between cetegories on front page on mobile display

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -360,4 +360,8 @@ input[name="q"]::placeholder {
     #profile_order_history {
         padding-top: 30px;
     }
+
+    .container {
+        padding-top: 5px;
+    }
 }
